--- a/pokedex/assets/css/pokedex.css
+++ b/pokedex/assets/css/pokedex.css
@@ -7,7 +7,6 @@
 }
 
 .pokemon {
-    background-color: #49d0b0;
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
@@ -15,8 +14,64 @@
     padding: 1rem;
 }
 
+.normal {
+    background-color: #a6a877;
+}
+.grass {
+    background-color: #77c850;
+}
+.fire {
+    background-color: #ee7f30;
+}
+.water {
+    background-color: #678fee;
+}
+.electric {
+    background-color: #f7cf2e;
+}
+.ice {
+    background-color: #98d5d7;
+}
+.ground {
+    background-color: #dfbf69;
+}
+.flying {
+    background-color: #a98ff0;
+}
+.poison {
+    background-color: #a040a0;
+}
+.fighting {
+    background-color: #bf3029;
+}
+.psychic {
+    background-color: #f65687;
+}
+.dark {
+    background-color: #725847;
+}
+.rock {
+    background-color: #b8a137;
+}
+.bug {
+    background-color: #a8b720;
+}
+.ghost {
+    background-color: #6e5896;
+}
+.steel {
+    background-color: #b9b7cf;
+}
+.dragon {
+    background-color: #6f38f6;
+}
+.fairy {
+    background-color: #f9aec7;
+}
+
 .pokemon .number {
-    color: #29b491;
+    color: rgba(0, 0, 0, .5);
+    mix-blend-mode: overlay;
     text-align: right;
     font-size: .625rem;
 }
@@ -24,6 +79,7 @@
 .pokemon .name {
     color: #FFF;
     margin-bottom: 0;
+    text-transform: capitalize;
 }
 
 .pokemon .detail {
@@ -40,12 +96,13 @@
 }
 
 .pokemon .detail .types .type {
-    background-color: #61e1ca;
     color: #FFF;
     padding: .25rem .5rem;
     margin: .25rem 0;
     font-size: .625rem;
     border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
 }
 
 .pokemon .detail img {
